# DemandPrep-artifact

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml  requirements.txt  streamlit_app.py
outputs/demo_trace_runs/original/native/beers/20260526-192337/: cleaned.csv  decision_log.csv  metrics.json  model_trace.csv  operation_trace.csv  operator_trace.json  operator_weight_trace.csv  run_config.json  uniclean_cleaned.csv  uniclean_trace.json  workflow_trace.json
outputs/demo_trace_runs/original/native/beers/20260526-192337/uniclean_workflow/: operation_rule_trace.csv  operator_trace.csv
outputs/demo_trace_runs/original/native/beers/20260526-192337/work/: beers_clean_work.csv  beers_dirty_work.csv
scripts/: make_ddpagent_figures.py  run_demo_trace.sh  run_streamlit_demo.sh  verify_artifact.py
src/: Clean.py
src/ads_clean/: cli.py  demo_data.py  executor.py  metrics.py  orchestrator.py  uniclean_runner.py
src/demandclean/core/environments/: two_phase_env.py
src/demandclean/inference/: two_phase.py
src/demandclean/utils/: logger.py
tests/: test_trace_outputs.py
